consul-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: consul-ingress
  namespace: vault-stage
spec:
  rules:
    - host: consul-stg.dev.example.com
      http:
        paths:
          - backend:
              serviceName: consul-stage-consul-ui
              servicePort: 8500
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - consul-stg.dev.example.com
      secretName: consul-stg-dev-example-com
