vault-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
  name: vault-ingress
  namespace: vault-stage
spec:
  rules:
    - host: vault-stg.dev.example.com
      http:
        paths:
          - backend:
              serviceName: vault-ha-stage-ui
              servicePort: 8200
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - vault-stg.dev.example.com
      secretName: vault-stg-dev-example-com
